[package]
name = "Cypherex_Pi"
version = "0.1.0"
edition = "2021"


[dependencies]
ring = "0.16.20"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[target.armv7a-none-eabi]
runner = "ruspiro-push"